- Added mixin to detect create contraption interactions - routed mixin to generate simple string event in AeroWaypoints main - remodeled waypoint manager - added waypointClientMananager